# auxdrv

./: .gitignore  .opencode_state.json  AGENTS.md  CHANGELOG.md  DEVELOPMENT_PLAN.md  GEMINI.md  LICENSE  OPENCODE_SESSION.md  README.md  STATUS.md  alignment.py  celestron_aux_driver.py  celestron_indi_driver.py  config.json  config.yaml  extended_test.py  indi-celestronaux  log  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docs.yml
docs/: ALIGNMENT_SYSTEM.md  ANALYSIS_DEAD_RECKONING.md  COMPLETENESS.md  HARDWARE_TESTING.md  INDI_SERVER_NOTES.md  Makefile  READINESS.md  TESTING_STRATEGY.md  TRACKING_SYSTEM.md  USER_MANUAL.md  VALIDATION.md  alignment.md  api.md  api.rst  conf.py  getting_started.md  hardware_validation.md  index.md  index.rst  technical_reference.md  testing.md  user_guide.md
scripts/: alignment_analysis.py  hit_validation.py  pec_measure.py  ppt_accuracy.py  real_world_validation.py
simulator/: nse_simulator.py  nse_simulator_old.py  nse_telescope.py  show_guide.py  show_track.py
src/celestron_aux/: alignment.py  celestron_aux_driver.py  celestron_indi_driver.py  config.default.toml  config.yaml
src/celestron_aux/simulator/: README.md  nse_simulator.py  nse_telescope.py  nse_tui.py  web_console.py
tests/: base_test.py  test_alignment_adaptive.py  test_alignment_advanced.py  test_alignment_math.py  test_alignment_svd.py  test_functional.py  test_moving_objects.py  test_safety.py  test_simulator.py  test_simulator_core.py  test_tracking_accuracy.py  test_visual_stars.py
tests/experimental/: test_experimental_mismatches.py
tests/integration/: conftest.py  test_full_stack.py
