[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "indi-celestron-aux"
version = "1.6.5"
description = "INDI driver for Celestron AUX mounts"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [
    { name = "Paweł T. Jochym", email = "jochym@gmail.com" },
]
dependencies = [
    "indipydriver>=3.0.4",
    "indipyserver>=0.0.1",
    "pyserial-asyncio>=0.6",
    "ephem>=4.2",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
simulator = [
    "textual>=1.0.0",
]
web = [
    "textual>=1.0.0",
    "fastapi",
    "uvicorn",
    "websockets",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
]
docs = [
    "sphinx>=7.0",
    "furo",
    "myst-parser",
    "sphinx-copybutton",
]

[project.scripts]
indi-celestron-aux = "celestron_aux.celestron_indi_driver:main"
celestron-aux-simulator = "celestron_aux.simulator.nse_simulator:main"

[tool.hatch.build.targets.wheel]
packages = ["src/celestron_aux"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
